--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,13 @@ main{
     border-radius: 20px;
     padding: 2rem;
 }
+footer{
+    bottom: 0;
+    height: 20px;
+    border-top: 20px var(--text-color);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
