--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ main{
 footer{
     bottom: 0;
     height: 20px;
-    border-top: 2px var(--text-color);
+    border-top: 2px solid var(--text-color);
     position: absolute;
     display: flex;
     justify-content: center;
