--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    --background-color: rgba(1, 116, 74, 0.889);
+    --background-color: rgba(170, 241, 215, 0.889);
     --text-color: rgb(212, 209, 209);
 }
 
@@ -12,7 +12,7 @@ body{
     width: 100%;
     height: 100vh;
     background-color: var(--background-color) !important;
-    color: var(--text-color);
+    color: var(--text-color) !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
