--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ form{
 
 input{
     width: 100%;
-    margin-bottom: 2.0rem;!important
+    margin-bottom: 1.3rem !important;
     position: relative;
 }
 
